# iptv_playlist_browser

./: .gitignore  CHANGELOG.md  GeneratePlaylist.py  MainWindow.py  OpenLocalFile.py  OpenPreferences.py  OpenRemoteFile.py  OpenXtream.py  README.md  VERSION  constant.py  iptv_playlist_browser_gui.py  main_ui.py  playlist.py  playlist_browser_gui.py  pyproject.toml  requirements.txt  tools.py
iptv_playlist_browser/: GeneratePlaylist.py  MainWindow.py  OpenLocalFile.py  OpenPreferences.py  OpenRemoteFile.py  OpenXtream.py  __init__.py  __main__.py  generate_playlist_pyside6.py  local_file_pyside6.py  playlist.py  xtream_code_pyside6.py
tests/: config.ini.sample  test_playlist.py
tests/resources/: test_playlist.m3u
ui/: generate_playlist.ui  generate_playlist_pyside6.py  local_file.ui  main_ui.ui  main_ui_pyside6.py  preferences.ui  preferences_pyside6.py  remote_file.ui  remote_file_pyside6.py  xtream_code.ui
