[tool.poetry]
name = "iptv-playlist-browser"
version = "1.04.1"
description = "This tool allows to browse IPTV playlist in Windows."
authors = ["PhunkyBob"]
license = "GNU General Public License"
readme = "README.md"
packages = [{include = "iptv_playlist_browser"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.28.2"
pyside6 = "^6.5.0"
psutil = "^5.9.5"
pyinstaller = "^5.10.1"
nuitka = "^2.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
